Kexi queries/parser: make SUBSTR(X, Y [, Z]) built-in SQL function work

This is a first step to make lots of functions work.
https://community.kde.org/Kexi/Plugins/Queries/SQL_Functions#Functions

Details:
- add a few convenience functions to BaseExpr
- N-arg expressions: make token-to-string function support char tokens
- add KexiDBExpr_ArgumentList class ID for N-arg expressions (,,,,)
- FunctionExpr: compute type and validation for SUBSTR()
- parser: also support empty arg list "()" in functions

REVIEW:122783
BUG:333206
FIXED-IN:2.9.1